--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "electron": "4.0.5",
     "electron-builder": "~20.39.0",
     "polymer-cli": "^1.9.8",
-    "typescript": "^3.4.1",
+    "typescript": "^3.4.4",
     "wct-browser-legacy": "^1.0.0"
   },
   "scripts": {
@@ -35,8 +35,11 @@
     "tsc-es6": "tsc  -p lib/es6"
   },
   "dependencies": {
+    "@collaborne/paper-chip": "^3.0.5",
+    "@fluid-next/paper-autocomplete": "^3.0.0",
+    "@fluidnext/paper-input-file": "git+https://github.com/fluidnext/paper-input-file.git",
     "@p3e/library": "git+https://github.com/visa4/p3e-library.git",
-    "@p3e/paper-autocomplete": "git+https://github.com/EmanueleDessi/paper-autocomplete.git",
+    "@p3e/paper-autocomplete": "git+https://github.com/visa4/paper-autocomplete.git",
     "@polymer/app-layout": "^3.0.2",
     "@polymer/app-localize-behavior": "^3.0.1",
     "@polymer/app-media": "^3.0.1",
@@ -48,10 +51,11 @@
     "@polymer/paper-card": "^3.0.1",
     "@polymer/paper-checkbox": "^3.0.1",
     "@polymer/paper-dialog": "^3.0.1",
+    "@polymer/paper-dialog-scrollable": "^3.0.1",
     "@polymer/paper-dropdown-menu": "^3.0.1",
     "@polymer/paper-fab": "^3.0.1",
     "@polymer/paper-icon-button": "^3.0.2",
-    "@polymer/paper-input": "^3.0.1",
+    "@polymer/paper-input": "^3.0.2",
     "@polymer/paper-item": "^3.0.1",
     "@polymer/paper-listbox": "^3.0.1",
     "@polymer/paper-menu-button": "^3.0.1",
@@ -67,12 +71,13 @@
     "@polymer/paper-toggle-button": "^3.0.1",
     "@polymer/paper-tooltip": "^3.0.1",
     "@polymer/polymer": "^3.2.0",
-    "@webcomponents/webcomponentsjs": "^2.0.0",
-    "image-capture": "^0.4.0",
+    "@webcomponents/webcomponentsjs": "^2.2.10",
+    "adm-zip": "^0.4.13",
+    "fluent-ffmpeg": "^2.1.2",
     "paper-collapse-item": "^4.0.5",
-    "source-map-support": "^0.5.11",
+    "source-map-support": "^0.5.12",
     "web-animations-js": "^2.3.1",
-    "webrtc-adapter": "^7.2.2"
+    "webrtc-adapter": "^7.2.3"
   },
   "build": {
     "appId": "p3e.app",
