--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
   "repository": "git@github.com:visa4/p3e.git",
   "license": "BSD-3-Clause",
   "devDependencies": {
-    "@babel/core": "^7.4.3",
+    "@babel/core": "^7.4.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/register": "^7.4.0",
-    "@babel/runtime": "^7.4.3",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/register": "^7.4.4",
+    "@babel/runtime": "^7.4.4",
     "@types/source-map": "^0.5.7",
     "babel-polyfill": "^6.26.0",
     "devtron": "^1.4.0",
     "dexie": "^2.0.4",
     "electron": "4.0.5",
     "electron-builder": "~20.39.0",
-    "polymer-cli": "^1.9.8",
+    "polymer-cli": "^1.9.9",
     "typescript": "^3.4.4",
     "wct-browser-legacy": "^1.0.0"
   },
@@ -35,11 +35,10 @@
     "tsc-es6": "tsc  -p lib/es6"
   },
   "dependencies": {
-    "@collaborne/paper-chip": "^3.0.5",
-    "@fluid-next/paper-autocomplete": "^3.0.0",
+    "@collaborne/paper-chip": "^3.0.7",
+    "@fluid-next/paper-autocomplete": "3.0.1",
     "@fluidnext/paper-input-file": "git+https://github.com/fluidnext/paper-input-file.git",
     "@p3e/library": "git+https://github.com/visa4/p3e-library.git",
-    "@p3e/paper-autocomplete": "git+https://github.com/visa4/paper-autocomplete.git",
     "@polymer/app-layout": "^3.0.2",
     "@polymer/app-localize-behavior": "^3.0.1",
     "@polymer/app-media": "^3.0.1",
@@ -73,6 +72,7 @@
     "@polymer/polymer": "^3.2.0",
     "@webcomponents/webcomponentsjs": "^2.2.10",
     "adm-zip": "^0.4.13",
+    "easytimer.js": "git+ssh://git@github.com/albert-gonzalez/easytimer.js.git#v3.1.0",
     "fluent-ffmpeg": "^2.1.2",
     "paper-collapse-item": "^4.0.5",
     "source-map-support": "^0.5.12",
