--- a/app/config/config.json.dist
+++ b/app/config/config.json.dist
@@ -15,7 +15,10 @@
      "adapter" : {
         "dexie" : {
             "nameDb" : "dsign"
-        }
+        },
+       "localStorage" : {
+         "namespace" : "dsign"
+       }
      }
   }
 }
