--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "repository": "git@github.com:visa4/p3e.git",
   "license": "BSD-3-Clause",
   "devDependencies": {
-    "@babel/core": "^7.4.4",
+    "@babel/core": "^7.4.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
     "@babel/register": "^7.4.4",
-    "@babel/runtime": "^7.4.4",
+    "@babel/runtime": "^7.4.5",
     "@types/source-map": "^0.5.7",
     "babel-polyfill": "^6.26.0",
     "devtron": "^1.4.0",
@@ -36,7 +36,7 @@
   },
   "dependencies": {
     "@dsign/library": "github:dsignn/library",
-    "@fluidnext-polymer/paper-autocomplete": "^3.0.0",
+    "@fluidnext-polymer/paper-autocomplete": "github:fluidnext/paper-autocomplete#master",
     "@fluidnext-polymer/paper-chip": "github:fluidnext/paper-chip",
     "@fluidnext-polymer/paper-grid": "github:fluidnext/paper-grid",
     "@fluidnext-polymer/paper-input-file": "^3.0.0",
