--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@polymer/polymer": "^3.2.0",
     "@webcomponents/webcomponentsjs": "^2.2.10",
     "adm-zip": "^0.4.13",
+    "archiver": "^3.0.0",
     "easytimer.js": "git+ssh://git@github.com/albert-gonzalez/easytimer.js.git#v3.1.0",
     "fluent-ffmpeg": "^2.1.2",
     "paper-collapse-item": "^4.0.5",
