--- a/package.json
+++ b/package.json
@@ -74,9 +74,10 @@
     "@polymer/polymer": "^3.2.0",
     "@webcomponents/webcomponentsjs": "^2.2.10",
     "adm-zip": "^0.4.13",
-    "decompress": "^4.2.0",
     "archiver": "^3.0.0",
+    "decompress": "^4.2.0",
     "easytimer.js": "git+ssh://git@github.com/albert-gonzalez/easytimer.js.git#v3.1.0",
+    "express": "^4.17.1",
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^8.0.1",
     "paper-collapse-item": "^4.0.5",
