--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@fluidnext-polymer/paper-chip": "github:fluidnext/paper-chip",
     "@fluidnext-polymer/paper-grid": "github:fluidnext/paper-grid",
     "@fluidnext-polymer/paper-input-file": "^3.0.0",
+    "@fluidnext-polymer/paper-input-color": "^3.1.0",
     "@fluidnext-polymer/paper-pagination": "^3.0.0",
     "@polymer/app-layout": "^3.0.2",
     "@polymer/app-localize-behavior": "^3.0.1",
