--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
   },
   "dependencies": {
     "@dsign/library": "github:dsignn/library",
-    "@fluidnext-polymer/paper-autocomplete": "github:fluidnext/paper-autocomplete#master",
-    "@fluidnext-polymer/paper-chip": "github:fluidnext/paper-chip",
+    "@fluidnext-polymer/paper-autocomplete": "^3.0.2",
+    "@fluidnext-polymer/paper-chip": "^3.1.1",
     "@fluidnext-polymer/paper-grid": "github:fluidnext/paper-grid",
     "@fluidnext-polymer/paper-input-file": "^3.0.0",
     "@fluidnext-polymer/paper-input-color": "^3.1.0",
