--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dexie": "^2.0.4",
     "electron": "5.0.6",
     "electron-builder": "~20.39.0",
+    "mongodb": "^3.2.7",
     "polymer-cli": "^1.9.9",
     "typescript": "^3.5.1",
     "wct-browser-legacy": "^1.0.0"
