--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@babel/register": "^7.4.4",
     "@babel/runtime": "^7.4.5",
     "@types/source-map": "^0.5.7",
+    "acl": "^0.4.11",
     "babel-polyfill": "^6.26.0",
     "devtron": "^1.4.0",
     "dexie": "^2.0.4",
     "electron": "5.0.6",
     "electron-builder": "~20.39.0",
+    "js-acl": "^1.0.0",
     "mongodb": "^3.2.7",
     "polymer-cli": "^1.9.9",
     "typescript": "^3.5.1",
