--- a/package.json
+++ b/package.json
@@ -1,118 +1,20 @@
 {
   "version": "0.1.0",
   "author": "antonino.visalli@gmail.com",
-  "name": "@dsign/player",
+  "name": "dsign-player",
   "description": "Polymer 3 in an electron application",
-  "repository": "git@github.com:visa4/p3e.git",
+  "repository": "git@github.com:dsignn/player.git",
   "license": "BSD-3-Clause",
-  "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/register": "^7.4.4",
-    "@babel/runtime": "^7.4.5",
-    "@dsignn/player-cli": "github:dsignn/player-cli",
-    "@types/source-map": "^0.5.7",
-    "acl": "^0.4.11",
-    "babel-polyfill": "^6.26.0",
-    "devtron": "^1.4.0",
-    "dexie": "^2.0.4",
-    "electron": "5.0.6",
-    "electron-builder": "~20.39.0",
-    "mongodb": "^3.2.7",
-    "polymer-cli": "^1.9.9",
-    "typescript": "^3.5.1",
-    "wct-browser-legacy": "^1.0.0"
-  },
   "scripts": {
-    "postinstall": "cp app/config/config.json.dist app/config/config-development.json && cp app/config/config.json.dist app/config/config-production.json && cp app/config/module.json.dist app/config/module.json",
-    "start": "export APP_ENVIRONMENT=development && export ELECTRON_DISABLE_SECURITY_WARNINGS=true && electron ./app/main.js --inspect=5858",
-    "start-win": "set APP_ENVIRONMENT=development && electron .\\app\\main.js --inspect=5858",
-    "polymer-build": "polymer build",
-    "postpolymer-build": "mv build/es6bundle/package.json build/es6bundle/app && cp app/style/icon/logo.png build/es6bundle/app/icon.png",
-    "start-pre-build": "electron ./build/es6bundle/app/main.js --inspect=5858",
+    "postinstall": "cp app/config/config.json.dist app/config/config-development.json && cp app/config/config.json.dist app/config/config-production.json && cp app/config/module.json.dist app/config/module.json && cd app && npm install",
+    "start": "cd app && export APP_ENVIRONMENT=development && export ELECTRON_DISABLE_SECURITY_WARNINGS=true && ./node_modules/.bin/electron ./main.js --inspect=5858",
+    "start-win": "cd app && set APP_ENVIRONMENT=development &&  .\\node_modules\\.bin/electron .\\main.js --inspect=5858",
+    "polymer-build": "cd app && ./node_modules/.bin/polymer build",
+    "postpolymer-build": "rsync -avh app/build/ build/ --delete && rsync -avh --ignore-existing app/node_modules/ build/es6bundle/node_modules/ --delete && rm -rf app/build && cp app/style/icon/logo.png build/es6bundle/icon.png",
+    "start-pre-build": "cd app && ./node_modules/.bin/electron ./../build/es6bundle/main.js --inspect=5858",
     "test": "polymer test",
-    "dist": "electron-builder --project build/es6bundle/app/ -c.extraMetadata.main=main.js -w --x64",
-    "tsc-commonjs": "tsc  -p lib/commonjs",
-    "tsc-es6": "tsc  -p lib/es6",
-    "@dsign/player-cli": "github:dsignn/player-cli"
-  },
-  "dependencies": {
-    "@dsign/library": "github:dsignn/library",
-    "@fluidnext-polymer/paper-autocomplete": "^3.0.2",
-    "@fluidnext-polymer/paper-chip": "^3.1.1",
-    "@fluidnext-polymer/paper-grid": "github:fluidnext/paper-grid",
-    "@fluidnext-polymer/paper-input-file": "^3.0.0",
-    "@fluidnext-polymer/paper-input-color": "^3.1.0",
-    "@fluidnext-polymer/paper-pagination": "^3.0.0",
-    "@polymer/app-layout": "^3.0.2",
-    "@polymer/app-localize-behavior": "^3.0.1",
-    "@polymer/app-media": "^3.0.1",
-    "@polymer/iron-form": "^3.0.1",
-    "@polymer/iron-icons": "^3.0.1",
-    "@polymer/iron-pages": "^3.0.1",
-    "@polymer/paper-badge": "^3.0.1",
-    "@polymer/paper-button": "^3.0.1",
-    "@polymer/paper-card": "^3.0.1",
-    "@polymer/paper-checkbox": "^3.0.1",
-    "@polymer/paper-dialog": "^3.0.1",
-    "@polymer/paper-dialog-scrollable": "^3.0.1",
-    "@polymer/paper-dropdown-menu": "^3.0.1",
-    "@polymer/paper-fab": "^3.0.1",
-    "@polymer/paper-icon-button": "^3.0.2",
-    "@polymer/paper-input": "^3.0.2",
-    "@polymer/paper-item": "^3.0.1",
-    "@polymer/paper-listbox": "^3.0.1",
-    "@polymer/paper-menu-button": "^3.0.1",
-    "@polymer/paper-progress": "^3.0.1",
-    "@polymer/paper-radio-button": "^3.0.1",
-    "@polymer/paper-radio-group": "^3.0.1",
-    "@polymer/paper-ripple": "^3.0.1",
-    "@polymer/paper-slider": "^3.0.1",
-    "@polymer/paper-spinner": "^3.0.2",
-    "@polymer/paper-swatch-picker": "^3.0.1",
-    "@polymer/paper-tabs": "^3.1.0",
-    "@polymer/paper-toast": "^3.0.1",
-    "@polymer/paper-toggle-button": "^3.0.1",
-    "@polymer/paper-tooltip": "^3.0.1",
-    "@polymer/polymer": "^3.2.0",
-    "@webcomponents/webcomponentsjs": "^2.2.10",
-    "adm-zip": "^0.4.13",
-    "archiver": "^3.0.0",
-    "decompress": "^4.2.0",
-    "easytimer.js": "git+ssh://git@github.com/albert-gonzalez/easytimer.js.git#v3.1.0",
-    "fluent-ffmpeg": "^2.1.2",
-    "fs-extra": "^8.0.1",
-    "paper-collapse-item": "^4.0.5",
-    "web-animations-js": "^2.3.1",
-    "js-acl": "^1.0.0"
-  },
-  "build": {
-    "appId": "dsign.player",
-    "npmRebuild": false,
-    "files": [
-      "index.html",
-      "main.js",
-      "icon.png",
-      "config/**/*",
-      "style/**/*",
-      "module/**/*",
-      "entrypoint/**/*",
-      "elements/**/*",
-      "manifest.json",
-      {
-        "from": "../lib",
-        "to": "../lib"
-      }
-    ],
-    "directories": {
-      "output": "../../../releases"
-    },
-    "win": {
-      "legalTrademarks": "P3E",
-      "asar": false
-    }
+    "dist": "cd app && ./node_modules/.bin/electron-builder --project ../build/es6bundle -c.extraMetadata.main=main.js -wl --x64",
+    "clear-all": "rm -rf app/node_modules && rm -rf build && rm -rf releases"
   },
   "keywords": [
     "polymer 3",
