Fix module json

--- a/app/config/module.json.dist
+++ b/app/config/module.json.dist
@@ -186,6 +186,10 @@
                 "name": "media-device-icons",
                 "path": "element/icons/icons.js"
             }
+        ],
+        "autoloads": [
+            "src/storage/entity/MediaDeviceEntity.js",
+            "src/injector/MediaDeviceDataInjector.js"
         ]
     }
 ]
