--- a/app/package.json
+++ b/app/package.json
@@ -27,8 +27,8 @@
     "@fluidnext-polymer/paper-autocomplete": "^3.0.2",
     "@fluidnext-polymer/paper-chip": "^3.1.1",
     "@fluidnext-polymer/paper-grid": "github:fluidnext/paper-grid",
-    "@fluidnext-polymer/paper-input-file": "^3.0.0",
     "@fluidnext-polymer/paper-input-color": "^3.1.0",
+    "@fluidnext-polymer/paper-input-file": "^3.0.0",
     "@fluidnext-polymer/paper-pagination": "^3.0.0",
     "@polymer/app-layout": "^3.0.2",
     "@polymer/app-localize-behavior": "^3.0.1",
@@ -63,16 +63,17 @@
     "@polymer/polymer": "^3.2.0",
     "@webcomponents/webcomponentsjs": "^2.2.10",
     "adm-zip": "^0.4.13",
+    "app-module-path": "^2.2.0",
     "archiver": "^3.0.0",
     "decompress": "^4.2.0",
+    "dexie": "^2.0.4",
     "easytimer.js": "git+ssh://git@github.com/albert-gonzalez/easytimer.js.git#v3.1.0",
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^8.0.1",
-    "paper-collapse-item": "^4.0.5",
-    "web-animations-js": "^2.3.1",
     "js-acl": "^1.0.0",
-    "dexie": "^2.0.4",
-    "mongodb": "^3.2.7"
+    "mongodb": "^3.2.7",
+    "paper-collapse-item": "^4.0.5",
+    "web-animations-js": "^2.3.1"
   },
   "build": {
     "appId": "dsign.player",
