--- a/app/module/timer/package.json
+++ b/app/module/timer/package.json
@@ -16,6 +16,8 @@
     "autoloads": [
         "src/TimerService.js",
         "src/injector/TimerDataInjector.js",
-        "src/storage/entity/TimerEntity.js"
+        "src/storage/entity/TimerEntity.js",
+        "src/storage/entity/embedded/TimelineItem.js",
+        "src/storage/adapter/mongo/MongoTimerAdapter.js"
     ]
 }
