--- a/app/package.json
+++ b/app/package.json
@@ -6,12 +6,12 @@
   "repository": "git@github.com:dsignn/player.git",
   "license": "BSD-3-Clause",
   "devDependencies": {
-    "@babel/core": "^7.4.5",
+    "@babel/core": "^7.6.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-env": "^7.6.3",
     "@babel/register": "^7.4.4",
-    "@babel/runtime": "^7.4.5",
+    "@babel/runtime": "^7.6.3",
     "@types/source-map": "^0.5.7",
     "acl": "^0.4.11",
     "babel-polyfill": "^6.26.0",
@@ -19,13 +19,13 @@
     "electron": "5.0.6",
     "electron-builder": "~20.39.0",
     "polymer-cli": "^1.9.9",
-    "typescript": "^3.5.1",
+    "typescript": "^3.6.4",
     "wct-browser-legacy": "^1.0.0"
   },
   "dependencies": {
     "@dsign/library": "github:dsignn/library",
     "@fluidnext-polymer/paper-autocomplete": "^3.0.2",
-    "@fluidnext-polymer/paper-chip": "^3.1.1",
+    "@fluidnext-polymer/paper-chip": "fluidnext/paper-chip#develop",
     "@fluidnext-polymer/paper-grid": "github:fluidnext/paper-grid",
     "@fluidnext-polymer/paper-input-color": "^3.1.0",
     "@fluidnext-polymer/paper-input-file": "^3.0.0",
@@ -36,7 +36,7 @@
     "@polymer/iron-form": "^3.0.1",
     "@polymer/iron-icons": "^3.0.1",
     "@polymer/iron-pages": "^3.0.1",
-    "@polymer/paper-badge": "^3.0.1",
+    "@polymer/paper-badge": "^3.1.0",
     "@polymer/paper-button": "^3.0.1",
     "@polymer/paper-card": "^3.0.1",
     "@polymer/paper-checkbox": "^3.0.1",
@@ -71,7 +71,7 @@
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^8.0.1",
     "js-acl": "^1.0.0",
-    "mongodb": "^3.2.7",
+    "mongodb": "^3.3.3",
     "paper-collapse-item": "^4.0.5",
     "web-animations-js": "^2.3.1"
   },
